--- a/app/css/appview.css
+++ b/app/css/appview.css
@@ -1,13 +1,36 @@
 @import "./modal.css";
+@import "./cross.css";
+@font-face {
+   /* roboto-condensed-regular - latin */
+    font-family: 'RobotoCondensed';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/roboto-condensed-v18-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
+         url('./fonts/roboto-condensed-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./fonts/roboto-condensed-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./fonts/roboto-condensed-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('./fonts/roboto-condensed-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/roboto-condensed-v18-latin-regular.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
+}
 
 .centered-header{
-  margin: auto;
-  text-align: center;
+    font-family: RobotoCondensed;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+    margin: auto;
+    text-align: center;
+    padding-bottom: 32px;
+    padding-top: 16px;
 }
 
 .photo-list{
     justify-content: center;
     flex-wrap:wrap;
+    margin-left: 20px;
+    margin-right: 20px;
     width: 85%;
     display: flex;
     flex-direction: row;
@@ -22,12 +45,23 @@
 }
 
 .footer{
+    font-family: RobotoCondensed;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #CCCCCC;
     margin-top: auto;
     border-width: thick;
-    border-top: black;
+    padding: 16px;
+    border-top:  1px solid;
     display: flex;
     justify-content: center;
     width:85%;
+}
+
+.photo-item{
+    margin: 20px;
 }
 
 #container{
