--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -1,13 +1,30 @@
+@font-face {
+    /* roboto-condensed-regular - latin */
+     font-family: 'RobotoCondensed';
+     font-style: normal;
+     font-weight: 400;
+     src: url('./fonts/roboto-condensed-v18-latin-regular.eot'); /* IE9 Compat Modes */
+     src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
+          url('./fonts/roboto-condensed-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('./fonts/roboto-condensed-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+          url('./fonts/roboto-condensed-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+          url('./fonts/roboto-condensed-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('./fonts/roboto-condensed-v18-latin-regular.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
+ }
+
 
 .modal-view{
+    padding: 30px;
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
-
 }
 
 .modal-pic-n-input{
+    width: 60%;
+    min-width: 300px;
+    max-width: 80%;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -22,15 +39,85 @@
 }
 
 .comments-view{
+    height: 80%;
+    width: auto;
     display: flex;
     flex-direction: column;
 }
 
+.input-field{
+    margin-top: 10px;
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    height: 30px;
+    min-height: 30px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 15px;
+}
+
 #send-comment-button{
+    margin-top: 10px;
+    border: 1px solid #4997D0;
+    border-radius: 3px;
+    height: 25%;
+    min-height: 30px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 15px;
     color: white;
     background-color: #4997D0;
 }
 #photo-placeholder{
+    height: 100%;
+    width: 100%;
+}
+
+.photo{
+    margin-right: 2px;
+    width: 100%;
     height: auto;
-    width: auto;
+}
+
+.modal-portal{
+    outline: none;
+    position: relative;
+    border-color:  #FFFFFF;
+    width:auto;
+    height: auto;
+    background-color: #FFFFFF;
+}
+
+.overlay-modal{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.comment {
+    margin: 2px;
+    padding: 4px;
+}
+
+#comment-text {
+    font-family: RobotoCondensed;
+    font-style: normal;
+    font-weight: normal;
+    color: #000000;
+    margin: 5px;
+}
+#comment-date{
+    font-family: RobotoCondensed;
+    font-style: normal;
+    font-weight: normal;
+    color: #999999;
+    margin: 5px;
 }
