--- a/app/css/appview.css
+++ b/app/css/appview.css
@@ -1,3 +1,4 @@
+@import "./mobile.css" (max-device-width:480px);
 @import "./modal.css";
 @import "./cross.css";
 @font-face {
@@ -13,29 +14,6 @@
          url('./fonts/roboto-condensed-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('./fonts/roboto-condensed-v18-latin-regular.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
 }
-
-.centered-header{
-    font-family: RobotoCondensed;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 42px;
-    margin: auto;
-    text-align: center;
-    padding-bottom: 32px;
-    padding-top: 16px;
-}
-
-.photo-list{
-    justify-content: center;
-    flex-wrap:wrap;
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 85%;
-    display: flex;
-    flex-direction: row;
-}
-
 .app-view{
     height: 100%;
     align-items: center;
@@ -43,31 +21,47 @@
     justify-content: center;
     display: flex;
 }
+@media (min-device-width:480px){
+    .centered-header{
+        font-family: RobotoCondensed;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 42px;
+        margin: auto;
+        text-align: center;
+        padding-bottom: 32px;
+        padding-top: 16px;
+    }
+    .photo-list{
+        justify-content: center;
+        flex-wrap:wrap;
+        margin-left: 20px;
+        margin-right: 20px;
+        width: 85%;
+        display: flex;
+        flex-direction: row;
+    }
 
-.footer{
-    font-family: RobotoCondensed;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    color: #CCCCCC;
-    margin-top: auto;
-    border-width: thick;
-    padding: 16px;
-    border-top:  1px solid;
-    display: flex;
-    justify-content: center;
-    width:85%;
+    .footer{
+        font-family: RobotoCondensed;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        color: #CCCCCC;
+        margin-top: auto;
+        border-width: thick;
+        padding: 16px;
+        border-top:  1px solid;
+        display: flex;
+        justify-content: center;
+        width:85%;
+    }  
+    .photo-item{
+        margin: 20px;
+    } 
 }
-
-.photo-item{
-    margin: 20px;
-}
-
-#container{
-    height: 100%;
-}
-
 body{
     height: 100%;
 }
